--- a/pacotes.css
+++ b/pacotes.css
@@ -160,3 +160,84 @@ footer {
     padding: 10px 0;
 
 }
+
+#backToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgb(47, 130, 224);
+    color: white;
+    border: none;
+    border-radius: 7px;
+    padding: 10px 15px;
+    font-size: 16px;
+    display: none;
+    z-index: 1000;
+}
+
+#backToTop:hover {
+    background-color: rgb(35, 101, 177);
+}
+
+
+form {
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    margin: 20px auto;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    background-color: rgb(47, 130, 224);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: rgb(35, 101, 177);
+}
+
+#snowflakes {
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+}
+
+.snowflake {
+    position: absolute;
+    top: -10px;
+    color: #FFF;
+    font-size: 2rem;
+    user-select: none;
+    pointer-events: none;
+    opacity: 0.8;
+    animation: snow 10s linear infinite;
+}
+
+@keyframes snow {
+    0% {
+        top: -10px;
+        transform: translateX(0);
+    }
+    100% {
+        top: 100%;
+        transform: translateX(calc(100vw * 1.5));
+    }
+}
+
